# xtd

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  cmd.hpp  string.hpp  string_test.cpp
.github/workflows/: build.yml  tests.yml
include/: cmd.hpp  daemon.hpp  string.hpp
src/: cmd_example.cpp  daemon_example.cpp
tests/: CMakeLists.txt  catch.hpp  cmd_test.cpp  string_benchmarks.cpp  string_test.cpp
